--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
            radial menu
        </title>
        
-       <link rel="stylesheet" type="text/css" href="style.css">
+       <link rel="stylesheet" type="text/css" href="index.css">
        </head>
        <body>
        <h1>hello world</h1>
